trunk/Archive2/14/1b885bc23ca371/output
main.cpp:22:5: error: no type named 'type' in 'Thing<1>'; did you mean 'Thing<Stuff::A>::type'?
    Thing<Stuff::B>::type y = 2; // nay
    ^~~~~~~~~~~~~~~~~~~~~
    Thing<Stuff::A>::type
main.cpp:16:11: note: 'Thing<Stuff::A>::type' declared here
    using type = int;
          ^
1 error generated.
